# CppProlog

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  REVIEW.md  TODO.md  demo.sh  docker-compose.yml  docker_demo_output.txt  family_example.pl  generate_docker.sh  software_dependencies.pl  test_cut.pl  test_first_arg_indexing.cpp  test_indexing.pl  test_new_features.pl  test_new_predicates.pl
CppSomething/: CMakeLists.txt  analyze.py  ast.hpp  codebase_context.txt  gemini_repl.py  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  repl.cpp  repl.hpp  resolver.cpp  resolver.hpp  type_system.cpp  type_system.hpp  unification.cpp  unification.hpp
benchmarks/: CMakeLists.txt  benchmark_parsing.cpp  benchmark_resolution.cpp  benchmark_unification.cpp
docs/: API.md  ARCHITECTURE.md  DATA_FLOW.md
examples/: CMakeLists.txt  README.md  arithmetic.cpp  basic.pl  basic_example.cpp  docker_example.cpp  docker_generator.pl  docker_minimal.pl  docker_simple.pl  docker_simple_working.pl  family.pl  family_tree.cpp  generated_dockerfile_example.pl  list_processing.cpp  lists.pl  simple_demo.pl
generated_project/prolog/: jenkinsfile_generator.pl
prolog/: docker_generator_adapter.pl  doxyfile_generator.pl
src/: CMakeLists.txt  main.cpp
src/prolog/: builtin_predicates.cpp  builtin_predicates.h  clause.cpp  clause.h  database.cpp  database.h  interpreter.cpp  interpreter.h  parser.cpp  parser.h  resolver.cpp  resolver.h  solution.h  term.cpp  term.h  unification.cpp  unification.h
src/utils/: memory_pool.cpp  memory_pool.h  string_utils.cpp  string_utils.h
test_cpp_project/: .gitignore  CMakeLists.txt
test_cpp_project/prolog/: rust_project_generator.pl
test_cpp_project/src/: main.cpp
test_python_project/: .gitignore  requirements.txt  setup.py
test_python_project/python_project/: __init__.py  main.py
test_rust_project/: .gitignore  Cargo.toml
test_rust_project/prolog/: documentation_generator.pl
test_rust_project/src/: main.rs
test_web_api/: Cargo.toml
test_web_api/src/: main.rs
tests/: CMakeLists.txt  test_builtin_predicates.cpp  test_comprehensive_features.cpp  test_cut.cpp  test_database.cpp  test_deductive_reasoning.cpp  test_interpreter.cpp  test_more_builtins.cpp  test_new_features.cpp  test_parser.cpp  test_resolver.cpp  test_term.cpp  test_unification.cpp  test_utils.cpp
